--- a/nextflow/nextflow_rsv.config
+++ b/nextflow/nextflow_rsv.config
@@ -69,7 +69,7 @@ process {
         maxRetries = 5  
     }
     withLabel: nextclade {
-        container = '/srv/scratch/iai/seqmet/singularity/nextclade.sif'
+        container = '/srv/scratch/iai/seqmet/singularity/rsv/nextclade.sif'
         maxForks = 16
         cpus = 1
         memory = 8.GB
@@ -106,5 +106,5 @@ executor {
 singularity {
     enabled = true
     autoMounts = false
-    runOptions = '--bind /srv/scratch/regueha'
+    runOptions = '--bind /srv/scratch/iai'
 }
